trunk/Archive2/9a/4aa8dfb2db03c9/output
A=1
OK
A=0
In file included from /usr/local/include/c++/4.9.0/bits/char_traits.h:39:0,
                 from /usr/local/include/c++/4.9.0/ios:40,
                 from /usr/local/include/c++/4.9.0/ostream:38,
                 from /usr/local/include/c++/4.9.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/stl_algobase.h: In instantiation of 'static _Tp* std::__copy_move<_IsMove, true, std::random_access_iterator_tag>::__copy_m(const _Tp*, const _Tp*, _Tp*) [with _Tp = element; bool _IsMove = true]':
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:396:70:   required from '_OI std::__copy_move_a(_II, _II, _OI) [with bool _IsMove = true; _II = element*; _OI = element*]'
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:434:38:   required from '_OI std::__copy_move_a2(_II, _II, _OI) [with bool _IsMove = true; _II = element*; _OI = element*]'
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:466:17:   required from '_OI std::copy(_II, _II, _OI) [with _II = std::move_iterator<element*>; _OI = element*]'
/usr/local/include/c++/4.9.0/bits/stl_uninitialized.h:93:53:   required from 'static _ForwardIterator std::__uninitialized_copy<true>::__uninit_copy(_InputIterator, _InputIterator, _ForwardIterator) [with _InputIterator = std::move_iterator<element*>; _ForwardIterator = element*]'
/usr/local/include/c++/4.9.0/bits/stl_uninitialized.h:125:41:   required from '_ForwardIterator std::uninitialized_copy(_InputIterator, _InputIterator, _ForwardIterator) [with _InputIterator = std::move_iterator<element*>; _ForwardIterator = element*]'
/usr/local/include/c++/4.9.0/bits/stl_uninitialized.h:278:63:   [ skipping 5 instantiation contexts, use -ftemplate-backtrace-limit=0 to disable ]
/usr/local/include/c++/4.9.0/bits/stl_iterator.h:446:2:   required from 'std::back_insert_iterator<_Container>& std::back_insert_iterator<_Container>::operator=(typename _Container::value_type&&) [with _Container = std::vector<element>; typename _Container::value_type = element]'
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:355:18:   required from 'static _OI std::__copy_move<true, false, std::random_access_iterator_tag>::__copy_m(_II, _II, _OI) [with _II = element*; _OI = std::back_insert_iterator<std::vector<element> >]'
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:396:70:   required from '_OI std::__copy_move_a(_II, _II, _OI) [with bool _IsMove = true; _II = element*; _OI = std::back_insert_iterator<std::vector<element> >]'
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:434:38:   required from '_OI std::__copy_move_a2(_II, _II, _OI) [with bool _IsMove = true; _II = __gnu_cxx::__normal_iterator<element*, std::vector<element> >; _OI = std::back_insert_iterator<std::vector<element> >]'
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:498:47:   required from '_OI std::move(_II, _II, _OI) [with _II = __gnu_cxx::__normal_iterator<element*, std::vector<element> >; _OI = std::back_insert_iterator<std::vector<element> >]'
main.cpp:21:84:   required from here
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:373:4: error: static assertion failed: type is not assignable
    static_assert( is_copy_assignable<_Tp>::value,
    ^
